--- a/index.html
+++ b/index.html
@@ -15,21 +15,26 @@
       <h1 class="content__title">Любимовка</h1>
     </main>
     <footer class="footer">
-      <ul class="footer__containers">
-        <li class="footer__container"><img class="footer__logo" src="./images/footer/footer__logo.svg"
-            alt="Любимовка" /></li>
-        <li class="footer__container">
-          <h3 class="footer__general-portners">Генеральные партнеры</h3>
-        </li>
-        <li class="footer__container"><a href="#" class="footer__container-link"><img
-              src="./images/footer/footer__fond-mp.svg" alt="Фонд Михаила прохорова" class="footer__fond-mp"></a></li>
-        <li class="footer__container"><a href="#" class="footer__container-link"><img
-              src="./images/footer/footer__mosbrew.svg" alt="МОСБРЕВ" class="footer__mosbrew"></a></li>
-        <li class="footer__container"><a href="#" class="footer__container-link"><img
-              src="./images/footer/footer__sbtg.svg" alt="СБТГ" class="footer__sbtg"></a></li>
-        <li class="footer__container"><a href="#" class="footer__container-link"><img
-              src="./images/footer/footer__to-talk.svg" alt="А ПОГОВОРИТЬ" class="footer__to-talk"></a></li>
-      </ul>
+      <div class="footer__header">
+        <a href="#" class="footer__logo-link">
+          <img src="./images/footer/footer__logo.svg" alt="Любимовка" class="footer__logo">
+        </a>
+        <h3 class="footer__nav-title">Генеральные партнеры</h3>
+        <nav class="footer__nav">
+          <a href="#" class="footer__nav-link">
+            <img src="./images/footer/footer__fond-mp.svg" alt="Фонд Михаила Прохорова" class="footer__fond-mp" />
+          </a>
+          <a href="#" class="footer__nav-link"><img src="./images/footer/footer__mosbrew.svg" alt="МОСБРЕВ"
+              class="footer__mosbrew" />
+          </a>
+          <a href="#" class="footer__nav-link">
+            <img src="./images/footer/footer__sbtg.svg" alt="СБТГ" class="footer__sbtg" />
+          </a>
+          <a href="#" class="footer__nav-link">
+            <img src="./images/footer/footer__to-talk.svg" alt="А ПОГОВОРИТЬ" class="footer__to-talk" />
+          </a>
+        </nav>
+      </div>
       </foter>
   </div>
 </body>
