feat: доавлить контент, закончить блок location

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <footer class="footer">
       <div class="footer__header">
         <a href="#" class="footer__logo-link">
-          <img src="./images/footer/footer__logo.svg" alt="Любимовка" class="footer__logo">
+          <img src="./images/footer/footer__logo.svg" alt="Любимовка" class="footer__logo" />
         </a>
         <h3 class="footer__nav-title">Генеральные партнеры</h3>
         <nav class="footer__nav">
           <a href="#" class="footer__nav-link">
             <img src="./images/footer/footer__fond-mp.svg" alt="Фонд Михаила Прохорова" class="footer__fond-mp" />
           </a>
-          <a href="#" class="footer__nav-link"><img src="./images/footer/footer__mosbrew.svg" alt="МОСБРЕВ"
-              class="footer__mosbrew" />
+          <a href="#" class="footer__nav-link">
+            <img src="./images/footer/footer__mosbrew.svg" alt="МОСБРЕВ" class="footer__mosbrew" />
           </a>
           <a href="#" class="footer__nav-link">
             <img src="./images/footer/footer__sbtg.svg" alt="СБТГ" class="footer__sbtg" />
@@ -35,7 +35,46 @@
           </a>
         </nav>
       </div>
-      </foter>
+      <div class="footer__content">
+        <address class="footer__location">
+          <h3 class="footer__location-title">Площадка «8/3»</h3>
+          <p class="footer__location-address footer__location-address_city">Москва,</p>
+          <p class="footer__location-address footer__location-address_street">ул. Казакова, 8, стр. 3</p>
+          <p class="footer__location-address footer__location-address_metro">Метро «Курская»</p>
+        </address>
+        <div class="footer__nav-container">
+          <nav class="footer__menu">
+            <h3 class="footer__menu-title">Любимовка</h3>
+            <ul class="footer__menu-items">
+              <li class="footer__menu-item"><a href="#" class="footer__menu-link">Афиша</a></li>
+              <li class="footer__menu-item"><a href="#" class="footer__menu-link">Библиотека</a></li>
+              <li class="footer__menu-item"><a href="#" class="footer__menu-link">Блог</a></li>
+              <li class="footer__menu-item"><a href="#" class="footer__menu-link">Новости</a></li>
+            </ul>
+          </nav>
+          <nav class="footer__about">
+            <h3 class="footer__about-title">О фестивале</h3>
+            <ul class="footer__about-items">
+              <li class="footer__about-item"><a href="#" class="footer__about-link">Организаторы</a></li>
+              <li class="footer__about-item"><a href="#" class="footer__about-link">История</a></li>
+              <li class="footer__about-item"><a href="#" class="footer__about-link">Контакты</a></li>
+              <li class="footer__about-item"><a href="#" class="footer__about-link">Для прессы</a></li>
+            </ul>
+          </nav>
+          <nav class="footer__all-projects">
+            <h3 class="footer__all-projects-title">Все проекты</h3>
+            <ul class="footer__all-project-items">
+              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Любимовка.Ещё</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Спектакли</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Сборник Любимовка.Пьесы</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Lark+Любимовка</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Практика постдраматурга</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Эхо Любимовки</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 
