--- a/index.html
+++ b/index.html
@@ -44,32 +44,32 @@
         </address>
         <div class="footer__nav-container">
           <nav class="footer__menu">
-            <h3 class="footer__menu-title">Любимовка</h3>
+            <h3 class="footer__menu-title"><a href="#" class="footer__link">Любимовка</a></h3>
             <ul class="footer__menu-items">
-              <li class="footer__menu-item"><a href="#" class="footer__menu-link">Афиша</a></li>
-              <li class="footer__menu-item"><a href="#" class="footer__menu-link">Библиотека</a></li>
-              <li class="footer__menu-item"><a href="#" class="footer__menu-link">Блог</a></li>
-              <li class="footer__menu-item"><a href="#" class="footer__menu-link">Новости</a></li>
+              <li class="footer__menu-item"><a href="#" class="footer__link">Афиша</a></li>
+              <li class="footer__menu-item"><a href="#" class="footer__link">Библиотека</a></li>
+              <li class="footer__menu-item"><a href="#" class="footer__link">Блог</a></li>
+              <li class="footer__menu-item"><a href="#" class="footer__link">Новости</a></li>
             </ul>
           </nav>
           <nav class="footer__about">
-            <h3 class="footer__about-title">О фестивале</h3>
+            <h3 class="footer__about-title"><a href="#" class="footer__link">О фестивале</a></h3>
             <ul class="footer__about-items">
-              <li class="footer__about-item"><a href="#" class="footer__about-link">Организаторы</a></li>
-              <li class="footer__about-item"><a href="#" class="footer__about-link">История</a></li>
-              <li class="footer__about-item"><a href="#" class="footer__about-link">Контакты</a></li>
-              <li class="footer__about-item"><a href="#" class="footer__about-link">Для прессы</a></li>
+              <li class="footer__about-item"><a href="#" class="footer__link">Организаторы</a></li>
+              <li class="footer__about-item"><a href="#" class="footer__link">История</a></li>
+              <li class="footer__about-item"><a href="#" class="footer__link">Контакты</a></li>
+              <li class="footer__about-item"><a href="#" class="footer__link">Для прессы</a></li>
             </ul>
           </nav>
           <nav class="footer__all-projects">
-            <h3 class="footer__all-projects-title">Все проекты</h3>
+            <h3 class="footer__all-projects-title"><a href="#" class="footer__link">Все проекты</a></h3>
             <ul class="footer__all-project-items">
-              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Любимовка.Ещё</a></li>
-              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Спектакли</a></li>
-              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Сборник Любимовка.Пьесы</a></li>
-              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Lark+Любимовка</a></li>
-              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Практика постдраматурга</a></li>
-              <li class="footer__all-projects-item"><a href="#" class="footer__all-projects-link">Эхо Любимовки</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__link">Любимовка.Ещё</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__link">Спектакли</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__link">Сборник Любимовка.Пьесы</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__link">Lark+Любимовка</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__link">Практика постдраматурга</a></li>
+              <li class="footer__all-projects-item"><a href="#" class="footer__link">Эхо Любимовки</a></li>
             </ul>
           </nav>
         </div>
