feat: добавить bottom подвала

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <author class="footer__authors">
           <img src="./images/footer/footer__author-design.svg" alt="Логотип" class="footer__author-logo">
           <p class="footer__author-design">дизайн сайта —
-            <span class="footer__author-design footer__author-design_name">shishki.collective</span>
+            <span class="footer__author-name">shishki.collective</span>
           </p>
           <p class="footer__author-master">вёрстка и разработака —
-            <sapn class="footer__author-master footer__author-master_name">студенты Яндекс.Практикума</sapn>
+            <sapn class="footer__author-name">студенты Яндекс.Практикума</sapn>
           </p>
         </author>
       </div>
