--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <div class="page">
     <main class="content">
       <h1 class="content__title">Любимовка</h1>
+      <section class="about">
+        <author class="about__authors">
+          
+        </author>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__header">
